<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">QuotesBook</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>

    <string name="title_activity_quote">Quote</string>

    <string name="text_loading_quotes">Referring to the wise...</string>

    <string name="message_quote_saved">Quote added.</string>

    <string name="label_share_image">Image</string>
    <string name="label_share_text">Text</string>

    <string name="twitter_account">1motivacion</string>

    <!-- Welcome texts -->

    <string name="search_hint">Search quotes with...</string>

    <!-- Examples Quotes -->

    <string name="example_quote_aristoteles">We are what we do, day by day. So that excellence is not an act but a habit.</string>
    <string name="example_author_aristoteles">- Aristotle</string>

    <string name="example_quote_shakespeare">In our crazy attempts, we give up what we are for what we expect to be.</string>
    <string name="example_author_shakespeare">- William Shakespeare</string>


    <!-- Ids -->

    <string name="adid_quote" translatable="false"> ca-app-pub-3341795231075884/5215712052</string>
    <string name="adid_somequotes" translatable="false">ca-app-pub-3341795231075884/6692445255</string>
    <string name="adid_quoteeditor" translatable="false">ca-app-pub-3341795231075884/8169178456</string>
    <string name="adid_quotesearch" translatable="false">ca-app-pub-3341795231075884/9645911655</string>


    <string name="title_activity_welcome">Welcome</string>
    <string name="title_activity_quote_search">Search quote</string>
    <string name="title_find_quotes">From leaders to leaders</string>
    <string name="title_share_in">Share on...</string>
    <string name="title_share_quotes">Save and share</string>
    <string name="tl_home">Some quotes</string>
    <string name="tl_quotesbook">My Quotes Book</string>
    <string name="tl_settings">Settings</string>
    <string name="title_dayquote">Today\'s Quote</string>
    <string name="title_activity_authors">Authors</string>
    <string name="drawer_opened">Opened</string>
    <string name="drawer_closed">Closed</string>
    <string name="message_quote_unsaved">Quote removed.</string>
    <string name="message_quotesbook_empty">Save your favorite quotes clicking the star button.</string>
    <string name="message_day_quotes">Every morning you will receive a thought to begin your day.</string>
    <string name="message_find_quotes">Discover thoughts by great people, useful for your days.</string>
    <string name="message_quotes_not_found">We did not find quotes that satisfy your search :(</string>
    <string name="message_share_quotes">Save your favorite quotes on your device and share them as text or beautiful images.</string>
    <string name="message_support_us">If you like QuotesBook reminds support us with an opinion, it will motivate us to improve :)</string>
    <string name="no_dayquote_available">Sorry, without the Play Services update we can not give you the quote of the day. As you can update, come back and you can receive the quote of the day.</string>
    <string name="message_quotes_connection_error">It happens that we need network connection to consult the wise.</string>
    <string name="message_quotes_backend_error">Our apologies, something has gone wrong by contacting the wise. Try later.</string>
    <string name="title_day_quotes">An inspiration each morning.</string>
    <string name="title_support_us">Tell us your opinion</string>
    <string name="quote_long">Anyone can become angry, that is very simple. But to be angry with the right person, at the right degree, at the right time with the right purpose and in the right way, that certainly is not so simple.</string>
    <string name="by">By</string>
    <string name="anonymous_author">Anonymous</string>
    <string name="nt_todaysquote_title">Someone has something to say</string>
    <string name="nt_todaysquote_subtitle">A message from</string>
    <string name="try_again">Try Again</string>

    <string name="widget_default_message">Getting quotes...</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
