<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    tools:context="com.medic.quotesbook.views.fragments.slides.OneInspirationSlideFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/accent"
        android:paddingTop="@dimen/slide_padding_top"
        android:paddingLeft="@dimen/slide_padding_lateral"
        android:paddingRight="@dimen/slide_padding_lateral"
        >
        <TextView android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_day_quotes"
            android:textColor="@color/white"
            android:textSize="@dimen/slide_title"
            android:layout_marginBottom="@dimen/slide_title_margin_bottom"
            />

        <TextView android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/message_day_quotes"
            android:textColor="@color/white"
            android:textSize="@dimen/slide_description"
            android:layout_below="@id/title"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@+id/description"
            android:paddingTop="@dimen/slide_title_margin_bottom"
            >

            <android.support.v7.widget.CardView android:id="@+id/quote_card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                card_view:cardCornerRadius="@dimen/cards_borders"
                card_view:cardElevation="@dimen/presentation_card_elevation"
                card_view:cardUseCompatPadding="true"
                card_view:cardPreventCornerOverlap="false"
                android:layout_margin="0dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="0dp"
                    android:padding="0dp"
                    >

                    <com.medic.quotesbook.views.widgets.RoundedImageView
                        android:id="@+id/author_picture"
                        android:scaleType="center"
                        android:layout_width="@dimen/image_author_small"
                        android:layout_height="match_parent"
                        android:layout_margin="0dp"
                        android:padding="0dp"
                        android:background="@color/primary"
                        card_view:sriv_left_bottom_corner_radius="@dimen/cards_borders"
                        card_view:sriv_left_top_corner_radius="@dimen/cards_borders"
                        />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="@dimen/standard_spacing"
                        >

                        <TextView android:id="@+id/quote_body"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textColor="@color/primary_text"
                            android:textSize="14dp"
                            android:text="@string/example_quote_shakespeare"
                            />

                        <TextView android:id="@+id/quote_author"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/example_author_shakespeare"
                            android:textSize="12dp"
                            android:textColor="@color/less"
                            android:paddingTop="@dimen/standard_padding"
                            android:gravity="right"
                            android:textAllCaps="true"
                            />

                    </LinearLayout>

                </LinearLayout>



            </android.support.v7.widget.CardView>

        </LinearLayout>

    </RelativeLayout>

</FrameLayout>
